infrastructure/kubernetes/manifests/renderred/production/resources/istio/Charts/istiod/MutatingWebhookConfiguration/istio-sidecar-injector-istio.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
    labels:
        app: sidecar-injector
        app.kubernetes.io/instance: istiod
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: istiod
        app.kubernetes.io/part-of: istio
        app.kubernetes.io/version: 1.27.0
        helm.sh/chart: istiod-1.27.0
        install.operator.istio.io/owning-resource: unknown
        istio.io/rev: default
        operator.istio.io/component: Pilot
        release: istiod
    name: istio-sidecar-injector-istio
webhooks:
    - admissionReviewVersions:
        - v1
      clientConfig:
        service:
            name: istiod
            namespace: istio
            path: /inject
            port: 443
      failurePolicy: Fail
      name: rev.namespace.sidecar-injector.istio.io
      namespaceSelector:
        matchExpressions:
            - key: istio.io/rev
              operator: In
              values:
                - default
            - key: istio-injection
              operator: DoesNotExist
      objectSelector:
        matchExpressions:
            - key: sidecar.istio.io/inject
              operator: NotIn
              values:
                - "false"
      reinvocationPolicy: Never
      rules:
        - apiGroups:
            - ""
          apiVersions:
            - v1
          operations:
            - CREATE
          resources:
            - pods
      sideEffects: None
    - admissionReviewVersions:
        - v1
      clientConfig:
        service:
            name: istiod
            namespace: istio
            path: /inject
            port: 443
      failurePolicy: Fail
      name: rev.object.sidecar-injector.istio.io
      namespaceSelector:
        matchExpressions:
            - key: istio.io/rev
              operator: DoesNotExist
            - key: istio-injection
              operator: DoesNotExist
      objectSelector:
        matchExpressions:
            - key: sidecar.istio.io/inject
              operator: NotIn
              values:
                - "false"
            - key: istio.io/rev
              operator: In
              values:
                - default
      reinvocationPolicy: Never
      rules:
        - apiGroups:
            - ""
          apiVersions:
            - v1
          operations:
            - CREATE
          resources:
            - pods
      sideEffects: None
    - admissionReviewVersions:
        - v1
      clientConfig:
        service:
            name: istiod
            namespace: istio
            path: /inject
            port: 443
      failurePolicy: Fail
      name: namespace.sidecar-injector.istio.io
      namespaceSelector:
        matchExpressions:
            - key: istio-injection
              operator: In
              values:
                - enabled
      objectSelector:
        matchExpressions:
            - key: sidecar.istio.io/inject
              operator: NotIn
              values:
                - "false"
      reinvocationPolicy: Never
      rules:
        - apiGroups:
            - ""
          apiVersions:
            - v1
          operations:
            - CREATE
          resources:
            - pods
      sideEffects: None
    - admissionReviewVersions:
        - v1
      clientConfig:
        service:
            name: istiod
            namespace: istio
            path: /inject
            port: 443
      failurePolicy: Fail
      name: object.sidecar-injector.istio.io
      namespaceSelector:
        matchExpressions:
            - key: istio-injection
              operator: DoesNotExist
            - key: istio.io/rev
              operator: DoesNotExist
      objectSelector:
        matchExpressions:
            - key: sidecar.istio.io/inject
              operator: In
              values:
                - "true"
            - key: istio.io/rev
              operator: DoesNotExist
      reinvocationPolicy: Never
      rules:
        - apiGroups:
            - ""
          apiVersions:
            - v1
          operations:
            - CREATE
          resources:
            - pods
      sideEffects: None
